// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v4 > extractRawCandidates case 0 1`] = `
[
  "!DOCTYPE",
  "bg-[#123456]",
  "body",
  "charset",
  "class",
  "content",
  "device-width",
  "div",
  "en",
  "head",
  "html",
  "initial-scale",
  "lang",
  "meta",
  "name",
  "text-(--x)",
  "text-xs",
  "title",
  "viewport",
  "width",
]
`;

exports[`v4 > tailwindcssPatcher casae 1 1`] = `
[
  "bg-[#123456]",
  "bg-gradient-to-b",
  "content",
  "from-[#2f73f1]",
  "h-[30px]",
  "text-(--x)",
  "text-xs",
  "to-[#4bcefd]",
  "w-[323px]",
]
`;

exports[`v4 > tailwindcssPatcher case 0 1`] = `
[
  "bg-[#123456]",
  "content",
  "text-(--x)",
  "text-xs",
]
`;
